<resources>
    <string name="app_name">appPrototype1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="confirm_password">Confirm password</string>
    <string name="enter_username">Enter Username</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="apiaries">Apiaries</string>
    <string name="hives">Hives</string>
    <string name="tasks">Tasks</string>
    <string name="harvesting">Harvesting</string>
    <string name="health">Health</string>
    <string name="overwintering">Overwintering</string>
    <string name="queen_rearing">Queen Rearing</string>
    <string name="inspections">Inspections</string>
    <string name="urgencies">Urgencies</string>
    <string name="incorrect_username_or_password">Incorrect username or password</string>
    <string name="send_instructions">Send Instructions</string>
    <string name="notification">notification</string>
    <string name="location">Location</string>
    <string name="apiary_name">Apiary Name</string>
    <string name="additional_notes">Additional Notes</string>
    <string name="save">Save</string>
    <string name="add_apiary">Add Apiary</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="add_hive">Add Hive</string>
    <string name="hive_number">Hive Number</string>
    <string name="apiary">Apiary</string>
    <string name="type">Type</string>
</resources>