<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:paddingLeft="4dp"
    tools:context=".apiary.NewApiaryActivity">

    <TextView
        android:id="@+id/noApiariesTV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/apiary_name"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/noApiariesTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/location"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noApiariesET1" />

    <TextView
        android:id="@+id/noApiariesTV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/additional_notes"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.17"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noApiariesET2" />

    <Button
        android:id="@+id/noApiariesBTN"
        android:layout_width="336dp"
        android:layout_height="60dp"
        android:background="@drawable/rounded_corner"
        android:backgroundTint="#CB8617"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="#CB8617"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noApiariesET3" />

    <EditText
        android:id="@+id/noApiariesET1"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:ems="10"
        android:gravity="start"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noApiariesTV1" />

    <EditText
        android:id="@+id/noApiariesET2"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:ems="10"
        android:gravity="start"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noApiariesTV2" />

    <EditText
        android:id="@+id/noApiariesET3"
        android:layout_width="336dp"
        android:layout_height="280dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:ems="10"
        android:gravity="start"
        android:hint="Add notes..."
        android:inputType="textPersonName"
        android:paddingLeft="4dp"
        android:textAlignment="viewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noApiariesTV3" />

</androidx.constraintlayout.widget.ConstraintLayout>