<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".hive.NewHiveActivity">

    <EditText
        android:id="@+id/newHiveET"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveTV" />

    <TextView
        android:id="@+id/newHiveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/hive_number"
        android:textAlignment="viewStart"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.135"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/newHiveSpinner"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveTV3" />

    <Spinner
        android:id="@+id/newHiveSpinner2"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveTV2" />

    <TextView
        android:id="@+id/newHiveTV3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Box Size"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.115"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveSpinner2" />

    <TextView
        android:id="@+id/newHiveTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/apiary"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveET" />


    <TextView
        android:id="@+id/newHiveTV4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="37dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="322dp"
        android:text="@string/type"
        android:textColor="#CB8617"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveSpinner" />

    <Spinner
        android:id="@+id/newHiveSpinner3"
        android:layout_width="336dp"
        android:layout_height="67dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="193dp"
        android:background="@drawable/dropdown"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/newHiveTV4" />

</androidx.constraintlayout.widget.ConstraintLayout>